--- a/ZSoulTool/ZSoulTool.csproj
+++ b/ZSoulTool/ZSoulTool.csproj
@@ -106,6 +106,7 @@
     <Compile Include="msgfileNew.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IDB.cs" />
     <Compile Include="Settings\Settings.cs" />
     <Compile Include="SSP.cs" />
     <Compile Include="StaticMethods.cs" />
