--- a/ZSoulTool/ZSoulTool.csproj
+++ b/ZSoulTool/ZSoulTool.csproj
@@ -149,6 +149,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Resources\newzss" />
+    <None Include="Resources\Blank.122" />
     <None Include="Resources\newss" />
   </ItemGroup>
   <ItemGroup>
