- bug fixing - fixed add new mesg options - fixed add new super soul code - new feature "replace soul from clipboard" - small bugg fixes and cleanup

--- a/ZSoulTool/ZSoulTool.csproj
+++ b/ZSoulTool/ZSoulTool.csproj
@@ -151,6 +151,7 @@
     <EmbeddedResource Include="Resources\newzss" />
     <None Include="Resources\Blank.122" />
     <None Include="Resources\newss" />
+    <Resource Include="Resources\Soul_BlankText.SSF" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
