finishing up - add new option to add limit burst set (replacing old add lb option) - update and fix ssp import code - general cleanup and code fixes

--- a/ZSoulTool/ZSoulTool.csproj
+++ b/ZSoulTool/ZSoulTool.csproj
@@ -152,7 +152,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Resources\newzss" />
-    <None Include="Resources\Blank.122" />
+    <None Include="Resources\BlankLB" />
     <None Include="Resources\newss" />
     <Resource Include="Resources\Soul_BlankText.SSF" />
   </ItemGroup>
